--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="style.css">
-  <script type="module" src="script.js"></script>
+  <script type="module" src="script.js" defer></script>
   <title>Frontend Mentor | Job Listings</title>
 </head>
 
@@ -27,7 +27,7 @@
 
       </ul>
     </section>
-    
+
   </main>
 
   <div class="attribution">
